[project]
name = "flopth"
version = "0.1.6"
description = "A program to calculate FLOPs and Parameters of Pytorch models"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "tabulate>=0.9.0",
    "torch>=1.6.0",
    "torchvision>=0.20.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
flopth="flopth.__init__:main"
